# aio-openapi

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yml  .test.env  LICENSE  MANIFEST.in  Makefile  mypi.ini  mypy.ini  pyproject.toml  readme.md  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build.yml  release.yml  update.yml
aio_openapi.egg-info/: PKG-INFO  SOURCES.txt
dev/: Dockerfile  install  install-test  lint-code  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  run-black.sh  run-isort.sh  test-version
docs/: conf.py  env.rst  glossary.rst  index.rst  queries.rst  reference.rst  requirements.txt  tutorial.rst  validation.rst  websocket.rst
openapi/: __init__.py  _py36.py  cli.py  exc.py  json.py  logger.py  middleware.py  reload.py  rest.py  sentry.py  testing.py  types.py  tz.py  uncovered.py  utils.py
openapi/data/: db.py  dump.py  exc.py  fields.py  validate.py  view.py
openapi/db/: __init__.py  columns.py  commands.py  compile.py  container.py  dbmodel.py  migrations.py  path.py  utils.py
openapi/db/openapi/: alembic.ini.mako  env.py  script.py.mako
openapi/pagination/: __init__.py  create.py  cursor.py  offset.py  pagination.py  search.py
openapi/spec/: __init__.py  exceptions.py  hdrs.py  operation.py  pagination.py  path.py  redoc.py  server.py  spec.py  utils.py
openapi/tests/: test_cli.py  test_db.py  test_schema_parser.py
openapi/ws/: __init__.py  broker.py  channel.py  channels.py  errors.py  manager.py  path.py  pubsub.py  rpc.py  utils.py
tests/: __init__.py  conftest.py  test.env  test_channels.py  test_cli.py  test_columns.py  test_db.py  test_db_cli.py  test_db_model.py  test_db_path_extra.py  test_db_single.py  test_dc_db.py  test_errors.py  test_filters.py  test_json.py  test_logger.py  test_migrations.py  test_pagination.py  test_paths.py  test_sentry.py  test_spec.py  test_utils.py  test_ws.py  utils.py
tests/core/: test_cli.py  test_cruddb.py  test_db.py  test_db_cli.py  test_db_model.py  test_db_path_extra.py  test_db_single.py  test_dc_db.py  test_errors.py  test_filters.py  test_json.py  test_logger.py  test_pagination.py  test_paths.py  test_union.py  test_utils.py
tests/data/: test_fields.py  test_json_field.py  test_validate_nested.py  test_validator.py  test_view.py
tests/example/: __init__.py  db.py  db_additional.py  dba.py  endpoints.py  endpoints_additional.py  endpoints_base.py  endpoints_cursor.py  endpoints_form.py  endpoints_pagination.py  main.py  models.py  ws.py
tests/example/db/: __init__.py  tables1.py  tables2.py
tests/pagination/: conftest.py  test_base_classes.py  test_cursor_pagination.py  test_offset_pagination.py  utils.py
tests/spec/: test_docstrings.py  test_schema_parser.py  test_spec.py  test_spec_utils.py  test_utils.py  test_validate_spec.py
tests/ws/: test_channels.py  test_ws.py
